feat: updating business validations
